--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@
                     <input type="submit" value="Add Book"
                     class="btn btn-primary btn-block">
         </form>
+        <table class="table table-striped mt-5">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>ISB#</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="book-list"></tbody>
+        </table>
     </div>
-
+    
+    <script src="index.js"></script>   
 </body>
 <html>
